# bitwise-enum

./: .gitignore  CHANGES.md  LICENSE  README.md  bitwise-enum.cabal  bounded-enum-set.cabal  bounded-enum.cabal  cabal.haskell-ci  package.yaml
.github/workflows/: haskell-ci.yml
Data/: EnumMemo.hs  EnumSet.hs
Data/Enum/: Memo.hs  Set.hs
Data/Enum/Set/: Base.hs  Class.hs
benchmarks/: EnumSet.hs
tests/: set-properties.hs
