cabal-version: 1.12

name:           bounded-enum-set
version:        0.1.0.0
homepage:       https://github.com/jnbooth/bounded-enum-set
bug-reports:    https://github.com/jnbooth/bounded-enum-set/issues
author:         Joshua Booth <joshua.n.booth@gmail.com>
maintainer:     Joshua Booth <joshua.n.booth@gmail.com>
license:        BSD3
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/jnbooth/bounded-enum-set

library
  exposed-modules:
      Data.EnumSet
  default-extensions: NoImplicitPrelude UnicodeSyntax BlockArguments TypeFamilies DeriveDataTypeable GeneralizedNewtypeDeriving ScopedTypeVariables BinaryLiterals NegativeLiterals NumDecimals ApplicativeDo
  ghc-options: -Wall -O2 -fwarn-tabs -ferror-spans
  build-depends:
      aeson
    , base
    , deepseq
    , mono-traversable
  default-language: Haskell2010
